# theweatherrack.com

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
hunt/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hunt/migrations/: 0001_initial.py
hunt/templates/hunt/: add_area.html  base.html  dashboard.html  forecast.html  login.html  register.html
weather_rack/: asgi.py  settings.py  urls.py  wsgi.py
