[project]
name = "weather-rack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "ephem>=4.2.1",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "timezonefinder>=8.2.1",
    "whitenoise>=6.12.0",
]
